A fix to build it with jdk8; updated paxtools version.