@@ -101,7 +101,7 @@
     <start-class>org.biopax.validator.web.Application</start-class>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <paxtools.version>5.1.0</paxtools.version>
+    <paxtools.version>5.2.1-SNAPSHOT</paxtools.version>
     <license.licenseName>MIT</license.licenseName>
     <commons-lang3.version>3.8.1</commons-lang3.version>
     <slf4j.version>1.7.25</slf4j.version>
@@ -121,7 +121,7 @@
     <dockerfile-maven-plugin.version>1.4.4</dockerfile-maven-plugin.version>
     <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
     <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
-    <jvm.options>-Xmx3g -Dfile.encoding=UTF-8 --illegal-access=permit -ea</jvm.options>
+    <jvm.options>-Xmx3g -Dfile.encoding=UTF-8 -ea</jvm.options>
     <agent>${settings.localRepository}/org/springframework/spring-instrument/${spring.version}/spring-instrument-${spring.version}.jar</agent>
     <asciidoctor-maven-plugin.version>1.5.7.1</asciidoctor-maven-plugin.version>
     <spring-restdocs-asciidoctor.version>2.0.2.RELEASE</spring-restdocs-asciidoctor.version>
