@@ -122,7 +122,7 @@
     <spring.version>5.1.2.RELEASE</spring.version>
     <agent>${settings.localRepository}/org/springframework/spring-instrument/${spring.version}/spring-instrument-${spring.version}.jar</agent>
 
-    <paxtools.version>5.1.0</paxtools.version>
+    <paxtools.version>5.2.1-SNAPSHOT</paxtools.version>
     <license.licenseName>MIT</license.licenseName>
     <junit.version>4.12</junit.version>
     <commons-lang3.version>3.8.1</commons-lang3.version>
@@ -213,7 +213,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
           <configuration>
-            <argLine>-Xmx3g -Dfile.encoding=UTF-8 -ea --illegal-access=permit</argLine>
+            <argLine>-Xmx3g -Dfile.encoding=UTF-8 -ea</argLine>
             <includes>
               <include>**/*Test.java</include>
             </includes>
